force-app/main/default/objects/Cash_Flow__c/Cash_Flow__c.object-meta.xml
<CustomObject>
    <label>Cash Flow</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Cash Flow Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>