force-app/main/default/objects/Cash_Flow__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Bubble Wrap</fullName>
            </value>
            <value>
                <fullName>Envelope</fullName>
            </value>
            <value>
                <fullName>Postage</fullName>
            </value>
            <value>
                <fullName>Shipping Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>