force-app/main/default/objects/Cash_Flow__c/recordTypes/Capital.recordType-meta.xml
<RecordType>
    <fullName>Capital</fullName>
    <active>true</active>
    <label>Capital</label>
</RecordType>