force-app/main/default/objects/Cash_Flow__c/validationRules/Amount_Greater_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Greater_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount must be greater than zero.</errorMessage>
</ValidationRule>