force-app/main/default/objects/Cash_Flow__c/listViews/Capital_Cash_Flow.listView-meta.xml
<ListView>
    <fullName>Capital_Cash_Flow</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cash_Flow__c.Capital</value>
    </filters>
    <label>Capital Cash Flow</label>
</ListView>